# adhigam

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
adhigam/distance/: distance.py  test_distance.py
adhigam/linear_model/: LinearRegression.py  test_LinearRegression.py
adhigam/losses/: loss.py
adhigam/neighbors/: KNeighbors.py
adhigam/normalization/: normalization.py
