[metadata]
name = adhigam
version = 0.0.1
author = Vishwanath Sangale
author_email = mail@vishsangale.com
description = Tensors and Dynamic neural networks in Python
long_description = file: README.md LICENSE
long_description_content_type = text/markdown
url = https://github.com/vishsangale/adhigam
project_urls =
    Bug Tracker = https://github.com/vishsangale/adhigam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 2-Clause "Simplified" License
    Operating System :: OS Independent

[options]
package_dir =
    = adhigam
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
